--- a/index.html
+++ b/index.html
@@ -26,21 +26,31 @@
   <section id="about" class="section">
     <div class="container">
       <h2>About</h2>
-      <p>Based in the Antelope Valley, Bacon Media brings the Wild West spirit to modern storytelling. Whether you're tying the knot, launching a product, or showing off your ride — we capture your story with sizzling style and crispy quality.</p>
+      <div class="decor-line"></div>
+      <p>
+        Based in the heart of the Antelope Valley, Bacon Media is where the Wild West meets cinematic flair. 
+        Whether you're tying the knot, promoting your brand, or showing off your wheels — we capture your moments with sizzling style and crispy quality.
+      </p>
     </div>
   </section>
 
   <section id="portfolio" class="section">
     <div class="container">
       <h2>Portfolio</h2>
-      <p>Portfolio coming soon... (photos and videos will be added here)</p>
+      <div class="decor-line"></div>
+      <div class="portfolio-grid">
+        <div class="card">Coming Soon</div>
+        <div class="card">Your work here</div>
+        <div class="card">Stay tuned...</div>
+      </div>
     </div>
   </section>
 
   <section id="services" class="section">
     <div class="container">
       <h2>Services</h2>
-      <ul>
+      <div class="decor-line"></div>
+      <ul class="services-list">
         <li>📸 Weddings</li>
         <li>🧍 Portraits</li>
         <li>🏡 Real Estate</li>
@@ -54,12 +64,13 @@
   <section id="contact" class="section">
     <div class="container">
       <h2>Contact</h2>
+      <div class="decor-line"></div>
       <p>Email: <a href="mailto:baconmediaofficial@gmail.com">baconmediaofficial@gmail.com</a></p>
       <p>Phone: <a href="tel:6616663134">(661) 666-3134</a></p>
       <div class="socials">
-        <a href="https://www.instagram.com/baconmediaofficial" target="_blank">📷 Instagram</a>
-        <a href="https://www.tiktok.com/@baconmediaofficial" target="_blank">🎵 TikTok</a>
-        <a href="https://www.youtube.com/@baconmediaofficial" target="_blank">▶️ YouTube</a>
+        <a href="https://www.instagram.com/baconmediaofficial" target="_blank" class="social-btn instagram">📷 Instagram</a>
+        <a href="https://www.tiktok.com/@baconmediaofficial" target="_blank" class="social-btn tiktok">🎵 TikTok</a>
+        <a href="https://www.youtube.com/@baconmediaofficial" target="_blank" class="social-btn youtube">▶️ YouTube</a>
       </div>
     </div>
   </section>
