--- a/index.html
+++ b/index.html
@@ -39,9 +39,10 @@
       <h2>Portfolio</h2>
       <div class="decor-line"></div>
       <div class="portfolio-grid">
-        <div class="card">Coming Soon</div>
-        <div class="card">Your work here</div>
-        <div class="card">Stay tuned...</div>
+        <div class="button-wrapper">
+  <a href="portfolio.html" class="portfolio-button">View Our Work</a>
+</div>
+
       </div>
     </div>
   </section>
