--- a/index.html
+++ b/index.html
@@ -7,12 +7,15 @@
   <link rel="stylesheet" href="style.css?v=2" />
 </head>
 <body>
-  <header>
-    <div class="container">
+ <header>
+  <div class="container header-flex">
+    <img src="logo.png" alt="Bacon Media Logo" class="logo" />
+    <div>
       <h1>Bacon Media</h1>
       <p class="tagline">Sizzling Shots. Crispy Quality.</p>
     </div>
-  </header>
+  </div>
+</header>
 
   <nav>
     <div class="container">
