--- a/portfolio.html
+++ b/portfolio.html
@@ -62,11 +62,16 @@
 </head>
 <body>
   <header>
-    <div class="container">
+  <div class="container header-flex">
+    <a href="index.html">
+      <img src="logo.png" alt="Bacon Media Logo" class="logo" />
+    </a>
+    <div>
       <h1>Bacon Media</h1>
       <p class="tagline">Sizzling Shots. Crispy Quality.</p>
     </div>
-  </header>
+  </div>
+</header>
 
   <nav>
     <div class="container">
