--- a/portfolio.html
+++ b/portfolio.html
@@ -120,10 +120,10 @@
       <div class="swiper portraitSwiper">
         <div class="swiper-wrapper">
           <div class="swiper-slide">
-            <img src="images/portrait1.jpg" alt="Portrait 1" />
+            <img src="images/portrait1.JPG" alt="Portrait 1" />
           </div>
           <div class="swiper-slide">
-            <img src="images/portrait2.jpg" alt="Portrait 2" />
+            <img src="images/portrait2.JPG" alt="Portrait 2" />
           </div>
         </div>
       </div>
@@ -135,10 +135,10 @@
       <div class="swiper carSwiper">
         <div class="swiper-wrapper">
           <div class="swiper-slide">
-            <img src="images/car1.jpg" alt="Car Photo 1" />
+            <img src="images/car1.JPG" alt="Car Photo 1" />
           </div>
           <div class="swiper-slide">
-            <img src="images/car2.jpg" alt="Car Photo 2" />
+            <img src="images/car2.JPG" alt="Car Photo 2" />
           </div>
         </div>
       </div>
