--- a/index.html
+++ b/index.html
@@ -38,18 +38,26 @@
     </div>
   </section>
 
-  <div class="map-container">
-  <iframe
-    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d53071.41888718889!2d-118.2142585010964!3d34.698145587180084!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c24c0d5f347a8f%3A0x79b6c92930ee5ea7!2sAntelope%20Valley%2C%20CA!5e0!3m2!1sen!2sus!4v1721089142071!5m2!1sen!2sus"
-    width="100%"
-    height="400"
-    style="border:0; border-radius: 10px; box-shadow: 0 0 10px rgba(0,0,0,0.3);"
-    allowfullscreen=""
-    loading="lazy"
-    referrerpolicy="no-referrer-when-downgrade">
-  </iframe>
-</div>
+<section class="section">
+  <div class="container">
+    <h2>Our Location</h2>
+    <div class="decor-line"></div>
+    <p>We proudly serve the Antelope Valley and surrounding areas.</p>
 
+    <div class="map-container">
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d53071.41888718889!2d-118.2142585010964!3d34.698145587180084!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c24c0d5f347a8f%3A0x79b6c92930ee5ea7!2sAntelope%20Valley%2C%20CA!5e0!3m2!1sen!2sus!4v1721089142071!5m2!1sen!2sus"
+        width="100%"
+        height="400"
+        style="border:0; border-radius: 10px; box-shadow: 0 0 10px rgba(0,0,0,0.3);"
+        allowfullscreen=""
+        loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade">
+      </iframe>
+    </div>
+  </div>
+</section>
+  
   <section id="portfolio" class="section">
     <div class="container">
       <h2>Portfolio</h2>
